--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body {
+.pageFormulaire,
+.firstPage {
     margin: 0;
     height: 100vh;
     background-color: rgb(200, 200, 201);
@@ -7,15 +8,51 @@ body {
     align-items: center;
 }
 
+body .historyTable,
+body .validateSessionTable {
+    margin: 0;
+    background-color: rgb(200, 200, 201);
+
+}
+
 .connexionSection,
 .addAssistantSection,
 .addSessionSection,
-.addTeacherSection {
+.addTeacherSection,
+.historyTable,
+.validateSessionTable {
     width: max-content;
     height: max-content;
 }
 
-form {
+.historyTable,
+.validateSessionTable {
+    table-layout: fixed;
+    width: 100%;
+    border-collapse: collapse;
+    border: 2px solid black;
+    margin: 1%;
+}
+
+.historyTable tr:nth-child(odd),
+.validateSessionTable tr:nth-child(odd) {
+    background-color: #dcdcdc;
+}
+
+.historyTable tr:nth-child(even),
+.validateSessionTable tr:nth-child(even) {
+    background-color: #f4f2f2;
+}
+
+.historyTable td,
+.validateSessionTable td {
+    padding: 1%;
+}
+
+.addAssistantForm,
+.addSessionForm,
+.addTeacherForm,
+.connexionForm {
     width: 100%;
     border: 1px solid #f1f1f1;
     padding: 17% 7% 9% 7%;
@@ -60,7 +97,35 @@ input[type=submit] {
     width: 100%;
 }
 
-input[type=submit]:hover {
+.firstPageAdminSection,
+.assistantFirstPageSection,
+.techerFirstPageSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f4f2f2;
+    padding: 3% 5% 3% 5%;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.firstPageAdminSection a,
+.assistantFirstPageSection a,
+.techerFirstPageSection a {
+    display: block;
+    width: 100%;
+    background-color: #007179;
+    text-align: center;
+    margin-bottom: 10%;
+    padding: 10% 10% 10% 10%;
+    text-decoration: none;
+    color: white;
+}
+
+
+input[type=submit]:hover,
+.firstPageAdminSection a:hover,
+.assistantFirstPageSection a:hover,
+.techerFirstPageSection a:hover {
     background-color: white;
     color: #007179;
     border: 1px solid #007179;
